[gd_scene load_steps=4 format=3 uid="uid://dbqo8siq2qfud"]

[ext_resource type="Script" path="res://src/scripts/ui/main_menu.gd" id="1_mwcqb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia4qn"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.729412, 0, 0, 1)
skew = Vector2(-0.243, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 15
corner_radius_bottom_right = 5
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(-2, 4)

[sub_resource type="LabelSettings" id="LabelSettings_mv026"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mwcqb")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.05
anchor_right = 0.8
anchor_bottom = 0.15
offset_bottom = 26.2
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ia4qn")
text = "Sztarszki Ã©s Haccs"
label_settings = SubResource("LabelSettings_mv026")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Quit game"

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 150.0
offset_right = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="NewGameMPButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Join Game (Multiplayer)"

[node name="NewGameSPButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "New Game (Singleplayer)"

[node name="LoadGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[connection signal="pressed" from="MenuContainer/NewGameMPButton" to="." method="_on_mp_click"]
[connection signal="pressed" from="MenuContainer/NewGameSPButton" to="." method="_on_server_click"]
